[package]
name = "rpi3-rust-samples"
version = "0.1.0"
authors = ["Vayentha <sayanpsur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5"
serde = "1.0.117"
url = "2.2.0"
oorandom = "11.1.3"
semver = "0.9.0"
curl = "0.4.34"
sha2 = "0.9.2"
aes-soft = "0.6.4"
daemonize = "0.4.1"